--- a/src/assets/menu.css
+++ b/src/assets/menu.css
@@ -2,19 +2,21 @@
     background : #f6f7f8;
     width : 50%;
     margin: auto;
-    border-radius: 1px
-}
-
-.list {
+    border-radius: 2px;
 
 }
+
 
 .list-item {
-    list-type: none;
+    list-style-type: none;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     color: #000;
-    align-item: center;
     padding: 1em;
+}
+
+li:hover {
+    background: #6ebdc782;
+    cursor: pointer
 }
